<resources>
    <string name="app_name">Simple Music Player</string>
    <string name="app_launcher_name">Music Player</string>
    <string name="playlist_empty">Your playlist is empty</string>
    <string name="no_permissions">Permission for accessing the songs has not been granted</string>
    <string name="delete">Delete</string>
    <string name="properties">Properties</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="extension">Extension</string>
    <string name="rename_song">Rename song</string>
    <string name="rename_song_error">An error occurred during the renaming</string>
    <string name="rename_song_empty">Please fill in all fields</string>
    <string name="progress" translatable="false">%1$s / %2$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enable_song_repetition">Repeat current song</string>
    <string name="disable_song_repetition">Stop repeating current song</string>
    <string name="song_repetition_enabled">Current song repetition enabled</string>
    <string name="song_repetition_disabled">Current song repetition disabled</string>
    <string name="enable_shuffle">Enable shuffle</string>
    <string name="disable_shuffle">Disable shuffle</string>
    <string name="shuffle_enabled">Shuffle enabled</string>
    <string name="shuffle_disabled">Shuffle disabled</string>

    <plurals name="songs_deleted">
        <item quantity="one">1 song deleted</item>
        <item quantity="other">%1$d songs deleted</item>
    </plurals>

    <string name="previous">Previous</string>
    <string name="playpause">Play Pause</string>
    <string name="next">Next</string>

    <!-- Sorting -->
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="file_name">File name</string>
    <string name="duration">Duration</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="numeric_progress">Display progress in numbers too</string>
    <string name="equalizer">Equalizer</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="website">More simple apps and source code at:\nhttp://simplemobiletools.com</string>
    <string name="email_label">Send your feedback or suggestions to:</string>
    <string name="email" translatable="false">hello@simplemobiletools.com</string>
    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
    <string name="invite_friends_underlined"><u>Invite friends</u></string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="invite_via">Invite via</string>
    <string name="rate_us_underlined"><u>Rate us in the Play Store</u></string>
    <string name="follow_us">Follow us:</string>
    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>

    <!-- License -->
    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
    <string name="third_party_licences">Third party licences</string>
    <string name="kotlin_title"><u>Kotlin (programming language)</u></string>
    <string name="kotlin_text" translatable="false">Copyright 2010 - 2016 JetBrains s.r.o.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="kotlin_url" translatable="false">https://github.com/JetBrains/kotlin</string>
    <string name="butterknife_title"><u>Butter Knife (view injector)</u></string>
    <string name="butterknife_text" translatable="false">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="butterknife_url" translatable="false">https://github.com/JakeWharton/butterknife</string>
    <string name="ambilwarna_title"><u>AmbilWarna (color picker)</u></string>
    <string name="ambilwarna_text" translatable="false">Copyright 2009-2015 Yuku\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="ambilwarna_url" translatable="false">https://github.com/yukuku/ambilwarna</string>
    <string name="otto_title"><u>Otto (event bus)</u></string>
    <string name="otto_text" translatable="false">Copyright 2012 Square, Inc.\nCopyright 2010 Google, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="otto_url" translatable="false">https://github.com/square/otto</string>
    <string name="filepicker_title"><u>Simple File Picker (filepicker dialog)</u></string>
    <string name="filepicker_text" translatable="false">Copyright 2016 SimpleMobileTools\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="filepicker_url" translatable="false">https://github.com/SimpleMobileTools/Simple-File-Picker</string>
    <string name="fileproperties_title"><u>Simple File Properties (properties dialog)</u></string>
    <string name="fileproperties_text" translatable="false">Copyright 2016 SimpleMobileTools\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="fileproperties_url" translatable="false">https://github.com/SimpleMobileTools/Simple-File-Properties</string>

    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
    <string name="app_short_description">A clean music player with a customizable widget.</string>
    <string name="app_long_description">
        A music player easily controllable from the status bar, home screen widget or by hardware buttons on your headset. You can sort the tracks by the Title or Artist, as well as change the Equalizer. Does not yet support filtering by artist or album, stay tuned!


        It contains a widget with customizable text color, alpha and the color of the background.

        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.

        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
    </string>
</resources>
