<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/toggle_song_repetition"
        android:icon="@drawable/ic_repeat"
        android:title="@string/disable_song_repetition"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_folder_to_playlist"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_folder_to_playlist"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/toggle_shuffle"
        android:icon="@drawable/ic_shuffle"
        android:title="@string/disable_shuffle"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_file_to_playlist"
        android:title="@string/add_file_to_playlist"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
